--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -3,19 +3,20 @@
 
             <div class="d-flex flex-column" [style]="{minWidth: '380px'}">
 
-                <h1>Login</h1>
+                <h1 class="mb-4 font-weight-bold">Login</h1>
 
                 <mat-form-field appearance="outline">
                     <mat-label>Login</mat-label>
                     <input matInput placeholder="">
                 </mat-form-field>
 
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" class="mb-3">
                     <mat-label>Password</mat-label>
                     <input matInput placeholder="">
                 </mat-form-field>
 
                 <button mat-raised-button
+                        size="lg"
                         class="w-100"
                         color="primary">submit</button>
 
