fix(app): recursion / links / guard / interceptor

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -7,7 +7,7 @@
         <crm-navbar></crm-navbar>
         <router-outlet></router-outlet>
         <div *ngIf="isMaps('maps')">
-            <crm-footer></crm-footer>
+<!--            <crm-footer></crm-footer>-->
         </div>
     </div>
     <div class="fixed-plugin">
