--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -10,62 +10,66 @@
                   <div class="card-body">
                       <form>
                           <div class="row">
-                              <div class="col-md-5">
-                                <mat-form-field class="example-full-width">
+                              <div class="col-12 col-lg-5">
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Login</mat-label>
                                     <input matInput placeholder="Company (disabled)" disabled>
                                   </mat-form-field>
                               </div>
-                              <div class="col-md-3">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Username">
+                              <div class="col-12 col-lg-3">
+                                  <mat-form-field appearance="outline">
+                                      <mat-label>Username</mat-label>
+                                    <input matInput placeholder="">
                                   </mat-form-field>
                               </div>
-                              <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Email address" type="email">
+                              <div class="col-12 col-lg-4">
+                                  <mat-form-field appearance="outline" class="example-full-width">
+                                      <mat-label>Email adres</mat-label>
+                                    <input matInput  type="email">
                                   </mat-form-field>
                               </div>
                           </div>
                           <div class="row">
-                              <div class="col-md-6">
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Fist Name" type="text">
+                              <div class="col-12 col-lg-6">
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>First Name</mat-label>
+                                  <input matInput type="text">
                                 </mat-form-field>
                               </div>
-                              <div class="col-md-6">
-                                <mat-form-field class="example-full-width">
+                              <div class="col-12 col-lg-6">
+                                <mat-form-field appearance="outline" class="example-full-width">
                                   <input matInput placeholder="Last Name" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
                           <div class="row">
-                              <div class="col-md-12">
-                                <mat-form-field class="example-full-width">
+                              <div class="col-12">
+                                <mat-form-field appearance="outline" class="example-full-width">
                                   <input matInput placeholder="Adress" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
                           <div class="row">
-                              <div class="col-md-4">
-                                <mat-form-field class="example-full-width">
+                              <div class="col-12 col-lg-4">
+                                <mat-form-field appearance="outline" class="example-full-width">
                                   <input matInput placeholder="City" type="text">
                                 </mat-form-field>
                               </div>
-                              <div class="col-md-4">
-                                <mat-form-field class="example-full-width">
+                              <div class="col-12 col-lg-4">
+                                <mat-form-field appearance="outline" class="example-full-width">
                                   <input matInput placeholder="Country" type="text">
                                 </mat-form-field>
                               </div>
-                              <div class="col-md-4">
-                                <mat-form-field class="example-full-width">
+                              <div class="col-12 col-lg-4">
+                                <mat-form-field appearance="outline" class="example-full-width">
                                   <input matInput placeholder="Postal Code" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
                           <div class="row">
-                              <div class="col-md-12">
+                              <div class="col-12 col-lg-12">
                                 <label>About Me</label>
-                                <mat-form-field class="example-full-width">
+                                <mat-form-field appearance="outline" class="example-full-width">
                                    <textarea matInput placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
                                  </mat-form-field>
                                   <!-- <div class="form-group">
@@ -77,7 +81,10 @@
                                   </div> -->
                               </div>
                           </div>
-                          <button mat-raised-button type="submit" class="btn btn-danger pull-right">Update Profile</button>
+                          <button mat-raised-button
+                                  color="primary"
+                                  type="submit"
+                                  class="pull-right">Update Profile</button>
                           <div class="clearfix"></div>
                       </form>
                   </div>
