--- a/src/app/calc-widget/components/dynamic-form/dynamic-form-step/dynamic-form-step.component.html
+++ b/src/app/calc-widget/components/dynamic-form/dynamic-form-step/dynamic-form-step.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form">
+<div>
     <label [attr.for]="step.key">{{step.label}}</label>
 
     @switch(step.controlType) {
@@ -25,7 +25,7 @@
 </div>
 
 
-<!-- 
+<!--
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at https://angular.io/license
