--- a/src/app/calc-widget/calc-widget.component.html
+++ b/src/app/calc-widget/calc-widget.component.html
@@ -11,6 +11,9 @@
     </ng-template>
 
 
+    <div #d3root2></div>
+
+
 
 
     <div style="width: 90%; border: 1px solid; padding: 16px; display: flex; gap: 8px; flex-wrap: wrap">
