--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,5 @@
-@use '@angular/material' as mat;
-@use './app/components/shell/shell-theme' as shell;
-
-@include mat.core();
-
-$crm-theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    primary: mat.$azure-palette,
-    tertiary: mat.$blue-palette,
-  ),
-  typography: (
-    brand-family: 'Roboto',
-    bold-weight: 900,
-  ),
-  density: (
-    scale: 0,
-  )
-));
-
-html {
-  @include mat.all-component-themes($crm-theme);
-  @include mat.typography-hierarchy($crm-theme);
-  @include shell.theme($crm-theme);
-}
+@import './styles/material-symbols-rounded';
+@import './styles/theme';
 
 html, body {
   margin: 0;
