--- a/src/app/components/shell/shell.component.scss
+++ b/src/app/components/shell/shell.component.scss
@@ -1,36 +1,14 @@
-@use '@angular/material' as mat;
-
-.spacer {
-  flex: 1 1 auto;
+.content {
+  width: 100%;
+  height: 100%;
+  padding: 64px 16px 24px 96px;
+  box-sizing: border-box;
 }
 
 .container {
   width: 100%;
   height: 100%;
-}
-
-.toolbar {
-  column-gap: 16px;
-}
-
-.mini-drawer-container {
-  display: flex;
-  width: 100%;
-  height: calc(100% - var(--mat-toolbar-standard-height));
-}
-
-.mini-drawer {
-  display: flex;
-  flex-direction: column;
-  row-gap: 8px;
-  width: 72px;
-  padding: 16px;
-  border-right-width: 1px;
-  border-right-style: solid;
+  border-radius: 28px;
   box-sizing: border-box;
-}
-
-.mini-drawer-content {
-  padding: 16px;
-  box-sizing: border-box;
+  overflow: auto;
 }
