--- a/src/app/components/shell/shell.component.html
+++ b/src/app/components/shell/shell.component.html
@@ -1,8 +1,8 @@
 <crm-header/>
 <crm-rail-navigation/>
 
-<div class="content">
-    <main class="container">
+<div class="crm-shell-content">
+    <main class="crm-shell-container">
         <ng-content/>
     </main>
 </div>
