--- a/src/app/components/shell/shell.component.scss
+++ b/src/app/components/shell/shell.component.scss
@@ -1,11 +1,11 @@
-.content {
+.crm-shell-content {
   width: 100%;
   height: 100%;
   padding: 64px 16px 24px 96px;
   box-sizing: border-box;
 }
 
-.container {
+.crm-shell-container {
   width: 100%;
   height: 100%;
   border-radius: 28px;
