feat: add grid system

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import './styles/material-symbols-rounded';
 @import './styles/theme';
+@import './styles/grid-system';
 
 html, body {
   margin: 0;
