--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -2,6 +2,7 @@
 @use '../app/components/shell/shell-theme' as shell;
 @use '../app/components/rail-navigation/rail-navigation-theme' as rail-navigation;
 @use '../app/components/header/header-theme' as header;
+@use '../app/pages/sign-in/sign-in-theme' as sign-in;
 
 @include mat.core();
 
@@ -27,6 +28,7 @@ html {
   @include shell.theme($crm-theme);
   @include rail-navigation.theme($crm-theme);
   @include header.theme($crm-theme);
+  @include sign-in.theme($crm-theme);
 }
 
 html, body {
