--- a/src/styles/_grid-system.scss
+++ b/src/styles/_grid-system.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 $container-max-widths: (
   "sm": 540px,
   "md": 720px,
@@ -12,8 +14,8 @@ $gutter-width: 16px;
 /* CONTAINER */
 .container {
   width: 100%;
-  padding-right: $gutter-width / 2;
-  padding-left: $gutter-width / 2;
+  padding-right: math.div($gutter-width, 2);
+  padding-left: math.div($gutter-width, 2);
   margin-right: auto;
   margin-left: auto;
   box-sizing: border-box;
@@ -29,17 +31,17 @@ $gutter-width: 16px;
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -$gutter-width / 2;
-  margin-left: -$gutter-width / 2;
+  margin-right: math.div(-$gutter-width, 2);
+  margin-left: math.div(-$gutter-width, 2);
 }
 
 /* COLUMNS */
 @for $i from 1 through $grid-columns {
   .col-#{$i} {
-    flex: 0 0 calc(percentage($i / $grid-columns) - $gutter-width);
-    max-width: percentage($i / $grid-columns);
-    padding-right: $gutter-width / 2;
-    padding-left: $gutter-width / 2;
+    flex: 0 0 calc(percentage(math.div($i, $grid-columns)) - $gutter-width);
+    max-width: percentage(math.div($i, $grid-columns));
+    padding-right: math.div($gutter-width, 2);
+    padding-left: math.div($gutter-width, 2);
   }
 }
 
@@ -47,8 +49,8 @@ $gutter-width: 16px;
   @media (min-width: #{$container-max-width}) {
     @for $i from 1 through $grid-columns {
       .col-#{$breakpoint}-#{$i} {
-        flex: 0 0 percentage($i / $grid-columns);
-        max-width: percentage($i / $grid-columns);
+        flex: 0 0 percentage(math.div($i, $grid-columns));
+        max-width: percentage(math.div($i, $grid-columns));
       }
     }
   }
