feat: add sign up page

--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="row">
-            <div class="col-4 crm-header-footer">
+            <div class="col-4 crm-sign-in-footer">
                 <button mat-button>Create account</button>
                 <button mat-flat-button (click)="onNextClick()">Next</button>
             </div>
