--- a/src/app/pages/sign-up/sign-up.component.scss
+++ b/src/app/pages/sign-up/sign-up.component.scss
@@ -7,7 +7,7 @@
   height: 100%;
 }
 
-.crm-sign-in-container {
+.crm-sign-up-container {
   display: flex;
   align-items: center;
 
@@ -19,7 +19,7 @@
   box-sizing: border-box;
 }
 
-.crm-sign-in-footer {
+.crm-sign-up-footer {
   display: flex;
   justify-content: flex-end;
   gap: 16px;
