--- a/src/app/components/shell/shell.component.scss
+++ b/src/app/components/shell/shell.component.scss
@@ -1,8 +1,12 @@
+@use 'utils';
+
 .crm-shell-content {
   width: 100%;
   height: 100%;
   padding: 64px 16px 24px 96px;
   box-sizing: border-box;
+
+  @include utils.use-token(background-color, shell-content-background-color);
 }
 
 .crm-shell-container {
@@ -11,4 +15,6 @@
   border-radius: 28px;
   box-sizing: border-box;
   overflow: auto;
+
+  @include utils.use-token(background-color, shell-container-background-color);
 }
