--- a/src/app/pages/sign-up/sign-up.component.scss
+++ b/src/app/pages/sign-up/sign-up.component.scss
@@ -1,3 +1,5 @@
+@use 'utils';
+
 :host {
   display: flex;
   flex-direction: column;
@@ -17,6 +19,8 @@
   margin: 0 auto;
   padding: 16px;
   box-sizing: border-box;
+
+  @include utils.use-token(background-color, sign-in-container-background-color);
 }
 
 .crm-sign-up-footer {
