--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,13 @@
-@import './styles/material-symbols-rounded';
-@import './styles/theme';
-@import './styles/grid-system';
+@use './styles/material-symbols-rounded';
+
+html {
+    @include material-symbols-rounded.core();
+}
 
 html, body {
-  margin: 0;
-  width: 100%;
-  height: 100%;
+    margin: 0;
+    padding: 0;
+
+    width: 100%;
+    height: 100%;
 }
