--- a/src/styles/_material-symbols-rounded.scss
+++ b/src/styles/_material-symbols-rounded.scss
@@ -1,24 +1,26 @@
-@font-face {
-  font-family: 'Material Symbols Rounded';
-  font-style: normal;
-  font-weight: 100 700;
-  src: url("../assets/fonts/Material Symbols Rounded.woff2") format('woff2');
-}
+@mixin core() {
+  @font-face {
+    font-family: 'Material Symbols Rounded';
+    font-style: normal;
+    font-weight: 100 700;
+    src: url("../assets/fonts/Material Symbols Rounded.woff2") format('woff2');
+  }
 
-.material-symbols-rounded {
-  font-family: 'Material Symbols Rounded';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  font-variation-settings: "wght" 400, "opsz" 24;
-  transition: font-variation-settings .2s cubic-bezier(.2, 0, 0, 1);
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
+  .material-symbols-rounded {
+    font-family: 'Material Symbols Rounded';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    font-variation-settings: "wght" 400, "opsz" 24;
+    transition: font-variation-settings .2s cubic-bezier(.2, 0, 0, 1);
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+  }
 }
